univention-updater (10.0.51-8) unstable; urgency=low

  * Bug #37231: Reboot only after all updates are performed.

 -- Philipp Hahn <hahn@univention.de>  Wed, 10 Dec 2014 14:20:43 +0100

univention-updater (10.0.51-7) unstable; urgency=low

  * Bug #37153: Disable general UMC logging in --list

 -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 09 Dec 2014 12:35:22 +0100

univention-updater (10.0.51-6) unstable; urgency=low

  * Bug #37153: Add option to --list apps in univention-add-app

 -- Dirk Wiesenthal <wiesenthal@univention.de>  Sat, 06 Dec 2014 22:45:03 +0100

univention-updater (10.0.51-5) unstable; urgency=low

  * Bug #37030: Show all blocking components

 -- Philipp Hahn <hahn@univention.de>  Wed, 03 Dec 2014 08:28:50 +0100

univention-updater (10.0.51-4) unstable; urgency=low

  * Bug #37030: Show all blocking components

 -- Philipp Hahn <hahn@univention.de>  Tue, 02 Dec 2014 17:49:09 +0100

univention-updater (10.0.51-3) unstable; urgency=low

  * Bug #37030: Show all blocking components

 -- Philipp Hahn <hahn@univention.de>  Mon, 01 Dec 2014 15:57:18 +0100

univention-updater (10.0.51-2) unstable; urgency=low

  * Bug #37031: Detect broken Dansguardian proxy

 -- Philipp Hahn <hahn@univention.de>  Mon, 01 Dec 2014 12:14:10 +0100

univention-updater (10.0.51-1) unstable; urgency=medium

  * Once again the app/component list. Install in any case (Bug #36769)

 -- Stefan Gohmann <gohmann@univention.de>  Tue, 18 Nov 2014 22:34:12 +0100

univention-updater (10.0.50-1) unstable; urgency=medium

  * Check for not-installed status for app/component list (Bug #36769)

 -- Stefan Gohmann <gohmann@univention.de>  Tue, 18 Nov 2014 22:25:31 +0100

univention-updater (10.0.49-1) unstable; urgency=medium

  * Added ucs-school-ucc-integration and ucs-school-umc-
    printermoderation to reinstall app/component list (Bug #36769)

 -- Stefan Gohmann <gohmann@univention.de>  Tue, 18 Nov 2014 14:21:13 +0100

univention-updater (10.0.48-1) unstable; urgency=medium
