@@ -49,11 +49,9 @@ import copy
 import httplib
 import socket
 import univention.config_registry
-import traceback
 import urllib2
 from urllib import quote
 import subprocess
-from operator import attrgetter, itemgetter
 import new
 import tempfile
 import shutil
@@ -1726,13 +1724,15 @@ class UniventionUpdater:
 					_code, _size, script = server.access(path, get=True)
 					# Bug #37031: dansguarding is lying and returns 200 even for blocked content
 					if not script.startswith('#!'):
-						raise ProxyError("Failed to fetch '%s' - maybe blocked by a proxy?")
+						uri = server.join(path)
+						raise ProxyError(uri, "download blocked by proxy?")
 					if verify and struct >= UCS_Version((3, 2, 0)):
 						path_gpg = path + '.gpg'
 						try:
 							_code, _size, signature = server.access(path_gpg, get=True)
 							if not signature.startswith("-----BEGIN PGP SIGNATURE-----"):
-								raise ProxyError("Failed to fetch '%s' - maybe blocked by a proxy?")
+								uri = server.join(path_gpg)
+								raise ProxyError(uri, "download blocked by proxy?")
 						except DownloadError:
 							raise VerificationError(path_gpg, "Signature download failed")
 						error = verify_script(script, signature)
